--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -1,10 +1,13 @@
-
 name: Post welcome comment
 on:
   pull_request:
     types: [opened]
 permissions:
   pull-requests: write
+jobs:
+  build:
+    name: Post welcome comment
+    runs-on: ubuntu-latest
 
 # This step triggers after the learner creates a new repository from the template.
 # This workflow updates from step 0 to step 1.
