--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -8,6 +8,12 @@ jobs:
   build:
     name: Post welcome comment
     runs-on: ubuntu-latest
+    steps:
+      - run: gh pr comment $PR_URL --body "Welcome to the repository!"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
+
 
 # This step triggers after the learner creates a new repository from the template.
 # This workflow updates from step 0 to step 1.
